<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.msu.rookscam.team9.connect4.PlayActivity"
    android:gravity="center_horizontal">


    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/doneButton"
        android:onClick="onUndoClick"
        android:text="@string/undo" />

    <Button
        android:id="@+id/surrenderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quitButton"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_toStartOf="@+id/quitButton"
        android:onClick="onSurrenderClick"
        android:text="@string/surrender" />

    <Button
        android:text="@string/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quitButton"
        android:onClick="onQuitClick"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/currentPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="0dp"
        android:paddingTop="15dp"
        android:text="@string/current_player" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doneButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_toEndOf="@+id/currentPlayerName"
        android:onClick="onDoneClick" />

    <view
        android:id="@+id/playView"
        class="edu.msu.rookscam.team9.connect4.PlayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/undoButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
