<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.msu.rookscam.team9.connect4.EndActivity">

    <TextView
        android:text="@string/game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/endGameText"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winnerTextView"
        android:layout_centerHorizontal="true"
        android:onClick="onExitClick"
        android:text="@string/exit" />

    <TextView
        android:text="@string/wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endGameText"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="18dp"
        android:id="@+id/winnerTextView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
